[gd_scene load_steps=7 format=2]

[ext_resource path="res://images/Fitito_alone.png" type="Texture" id=1]
[ext_resource path="res://fonts/Renogare-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://themes/button.tres" type="Theme" id=3]
[ext_resource path="res://scenes/screens/LevelClear.gd" type="Script" id=4]


[sub_resource type="DynamicFont" id=1]
size = 102
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 53
font_data = ExtResource( 2 )

[node name="Node2D" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background_blue" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0.231373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background_teal" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 1081.0
rect_scale = Vector2( 1.00185, 0.600243 )
color = Color( 0, 0.192157, 0.231373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fitito_alone" type="Sprite" parent="."]
position = Vector2( 959.421, 316.156 )
texture = ExtResource( 1 )

[node name="Level_Complete" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -449.0
margin_top = 11.3137
margin_right = 449.0
margin_bottom = 132.314
custom_fonts/font = SubResource( 1 )
text = "Level Complete!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next_level" type="Button" parent="."]
margin_left = 1331.38
margin_top = 787.102
margin_right = 1791.38
margin_bottom = 938.102
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
text = "Next Level"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Button" parent="."]
margin_left = 729.296
margin_top = 787.102
margin_right = 1189.3
margin_bottom = 938.102
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
text = "Retry"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level_select" type="Button" parent="."]
margin_left = 133.941
margin_top = 787.102
margin_right = 593.941
margin_bottom = 938.102
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
text = "Level Select"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Next_level" to="." method="_on_Next_level_pressed"]
[connection signal="pressed" from="Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="Level_select" to="." method="_on_lvlselector_pressed"]
